add maps of real routes

--- a/dataset_car/dataset_carro.ipynb
+++ b/dataset_car/dataset_carro.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,10 +19,236 @@
     "from concurrent.futures import ThreadPoolExecutor, ProcessPoolExecutor\n",
     "\n",
     "import os\n",
+    "import folium\n",
+    "from geopy.distance import distance\n",
     "\n",
-    "from ride_parser import RideParser\n",
+    "from ride_parser import UAHRideParser, RealRideParser\n",
     "from app_data_parser import get_data_from_app\n",
     "from PIL import Image"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "timestamp               float64\n",
+       "original_time_string     object\n",
+       "lat                     float64\n",
+       "long                    float64\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ride_root_dir = os.path.join(\"RealData\")\n",
+    "\n",
+    "ride = RealRideParser(ride_root_dir)\n",
+    "\n",
+    "ride.gps_df.dtypes\n",
+    "# ride.gps_df\n",
+    "# ride.accelerometer_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "((-23.5523206, -46.6656069), (-23.5523127, -46.6656244))"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "latitudes = ride.gps_df[\"lat\"]\n",
+    "longitudes = ride.gps_df[\"long\"]\n",
+    "\n",
+    "qtty = len(latitudes)\n",
+    "\n",
+    "lat_longs = [(latitudes.iloc[i], longitudes.iloc[i]) for i in range(qtty)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "start_lat_long = lat_longs[0]\n",
+    "end_lat_long = lat_longs[-1]\n",
+    "\n",
+    "mean_lat = latitudes.mean()\n",
+    "mean_long = longitudes.mean()\n",
+    "\n",
+    "start_lat_long, end_lat_long"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div style=\"width:100%;\"><div style=\"position:relative;width:100%;height:0;padding-bottom:60%;\"><span style=\"color:#565656\">Make this Notebook Trusted to load map: File -> Trust Notebook</span><iframe srcdoc=\"&lt;!DOCTYPE html&gt;\n",
+       "&lt;html&gt;\n",
+       "&lt;head&gt;\n",
+       "    \n",
+       "    &lt;meta http-equiv=&quot;content-type&quot; content=&quot;text/html; charset=UTF-8&quot; /&gt;\n",
+       "    \n",
+       "        &lt;script&gt;\n",
+       "            L_NO_TOUCH = false;\n",
+       "            L_DISABLE_3D = false;\n",
+       "        &lt;/script&gt;\n",
+       "    \n",
+       "    &lt;style&gt;html, body {width: 100%;height: 100%;margin: 0;padding: 0;}&lt;/style&gt;\n",
+       "    &lt;style&gt;#map {position:absolute;top:0;bottom:0;right:0;left:0;}&lt;/style&gt;\n",
+       "    &lt;script src=&quot;https://cdn.jsdelivr.net/npm/leaflet@1.9.3/dist/leaflet.js&quot;&gt;&lt;/script&gt;\n",
+       "    &lt;script src=&quot;https://code.jquery.com/jquery-1.12.4.min.js&quot;&gt;&lt;/script&gt;\n",
+       "    &lt;script src=&quot;https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js&quot;&gt;&lt;/script&gt;\n",
+       "    &lt;script src=&quot;https://cdnjs.cloudflare.com/ajax/libs/Leaflet.awesome-markers/2.0.2/leaflet.awesome-markers.js&quot;&gt;&lt;/script&gt;\n",
+       "    &lt;link rel=&quot;stylesheet&quot; href=&quot;https://cdn.jsdelivr.net/npm/leaflet@1.9.3/dist/leaflet.css&quot;/&gt;\n",
+       "    &lt;link rel=&quot;stylesheet&quot; href=&quot;https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css&quot;/&gt;\n",
+       "    &lt;link rel=&quot;stylesheet&quot; href=&quot;https://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css&quot;/&gt;\n",
+       "    &lt;link rel=&quot;stylesheet&quot; href=&quot;https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.2.0/css/all.min.css&quot;/&gt;\n",
+       "    &lt;link rel=&quot;stylesheet&quot; href=&quot;https://cdnjs.cloudflare.com/ajax/libs/Leaflet.awesome-markers/2.0.2/leaflet.awesome-markers.css&quot;/&gt;\n",
+       "    &lt;link rel=&quot;stylesheet&quot; href=&quot;https://cdn.jsdelivr.net/gh/python-visualization/folium/folium/templates/leaflet.awesome.rotate.min.css&quot;/&gt;\n",
+       "    \n",
+       "            &lt;meta name=&quot;viewport&quot; content=&quot;width=device-width,\n",
+       "                initial-scale=1.0, maximum-scale=1.0, user-scalable=no&quot; /&gt;\n",
+       "            &lt;style&gt;\n",
+       "                #map_829fbe32e0880b6aaccff54b3f2370ee {\n",
+       "                    position: relative;\n",
+       "                    width: 100.0%;\n",
+       "                    height: 100.0%;\n",
+       "                    left: 0.0%;\n",
+       "                    top: 0.0%;\n",
+       "                }\n",
+       "                .leaflet-container { font-size: 1rem; }\n",
+       "            &lt;/style&gt;\n",
+       "        \n",
+       "&lt;/head&gt;\n",
+       "&lt;body&gt;\n",
+       "    \n",
+       "    \n",
+       "            &lt;div class=&quot;folium-map&quot; id=&quot;map_829fbe32e0880b6aaccff54b3f2370ee&quot; &gt;&lt;/div&gt;\n",
+       "        \n",
+       "&lt;/body&gt;\n",
+       "&lt;script&gt;\n",
+       "    \n",
+       "    \n",
+       "            var map_829fbe32e0880b6aaccff54b3f2370ee = L.map(\n",
+       "                &quot;map_829fbe32e0880b6aaccff54b3f2370ee&quot;,\n",
+       "                {\n",
+       "                    center: [-23.54939353703125, -46.66485039942709],\n",
+       "                    crs: L.CRS.EPSG3857,\n",
+       "                    zoom: 14,\n",
+       "                    zoomControl: true,\n",
+       "                    preferCanvas: false,\n",
+       "                }\n",
+       "            );\n",
+       "            L.control.scale().addTo(map_829fbe32e0880b6aaccff54b3f2370ee);\n",
+       "\n",
+       "            \n",
+       "\n",
+       "        \n",
+       "    \n",
+       "            var tile_layer_302ce20510603b6cdbe5c519ee62d20b = L.tileLayer(\n",
+       "                &quot;https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png&quot;,\n",
+       "                {&quot;attribution&quot;: &quot;Data by \\u0026copy; \\u003ca target=\\&quot;_blank\\&quot; href=\\&quot;http://openstreetmap.org\\&quot;\\u003eOpenStreetMap\\u003c/a\\u003e, under \\u003ca target=\\&quot;_blank\\&quot; href=\\&quot;http://www.openstreetmap.org/copyright\\&quot;\\u003eODbL\\u003c/a\\u003e.&quot;, &quot;detectRetina&quot;: false, &quot;maxNativeZoom&quot;: 18, &quot;maxZoom&quot;: 18, &quot;minZoom&quot;: 0, &quot;noWrap&quot;: false, &quot;opacity&quot;: 1, &quot;subdomains&quot;: &quot;abc&quot;, &quot;tms&quot;: false}\n",
+       "            ).addTo(map_829fbe32e0880b6aaccff54b3f2370ee);\n",
+       "        \n",
+       "    \n",
+       "            var marker_2724e17e8882088b297aa4d240328eb7 = L.marker(\n",
+       "                [-23.5523206, -46.6656069],\n",
+       "                {}\n",
+       "            ).addTo(map_829fbe32e0880b6aaccff54b3f2370ee);\n",
+       "        \n",
+       "    \n",
+       "        var popup_b703794fbef745b21856adc376734fb4 = L.popup({&quot;maxWidth&quot;: &quot;100%&quot;});\n",
+       "\n",
+       "        \n",
+       "            \n",
+       "                var html_5916a67e2eb8472b50401a3048a55a88 = $(`&lt;div id=&quot;html_5916a67e2eb8472b50401a3048a55a88&quot; style=&quot;width: 100.0%; height: 100.0%;&quot;&gt;start&lt;/div&gt;`)[0];\n",
+       "                popup_b703794fbef745b21856adc376734fb4.setContent(html_5916a67e2eb8472b50401a3048a55a88);\n",
+       "            \n",
+       "        \n",
+       "\n",
+       "        marker_2724e17e8882088b297aa4d240328eb7.bindPopup(popup_b703794fbef745b21856adc376734fb4)\n",
+       "        ;\n",
+       "\n",
+       "        \n",
+       "    \n",
+       "    \n",
+       "            var marker_67474aef5bab75e225e6091bf7191c41 = L.marker(\n",
+       "                [-23.5523127, -46.6656244],\n",
+       "                {}\n",
+       "            ).addTo(map_829fbe32e0880b6aaccff54b3f2370ee);\n",
+       "        \n",
+       "    \n",
+       "        var popup_9e95abca66e72e1e9a5eecc10eac6ec0 = L.popup({&quot;maxWidth&quot;: &quot;100%&quot;});\n",
+       "\n",
+       "        \n",
+       "            \n",
+       "                var html_f4181b2eadd8261716061b3971431c00 = $(`&lt;div id=&quot;html_f4181b2eadd8261716061b3971431c00&quot; style=&quot;width: 100.0%; height: 100.0%;&quot;&gt;end&lt;/div&gt;`)[0];\n",
+       "                popup_9e95abca66e72e1e9a5eecc10eac6ec0.setContent(html_f4181b2eadd8261716061b3971431c00);\n",
+       "            \n",
+       "        \n",
+       "\n",
+       "        marker_67474aef5bab75e225e6091bf7191c41.bindPopup(popup_9e95abca66e72e1e9a5eecc10eac6ec0)\n",
+       "        ;\n",
+       "\n",
+       "        \n",
+       "    \n",
+       "&lt;/script&gt;\n",
+       "&lt;/html&gt;\" style=\"position:absolute;width:100%;height:100%;left:0;top:0;border:none !important;\" allowfullscreen webkitallowfullscreen mozallowfullscreen></iframe></div></div>"
+      ],
+      "text/plain": [
+       "<folium.folium.Map at 0x1ff17a86c60>"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "map = folium.Map(location=[mean_lat, mean_long], zoom_start=14, control_scale=True)\n",
+    "\n",
+    "folium.Marker(start_lat_long, popup=\"start\").add_to(map)\n",
+    "folium.Marker(end_lat_long, popup=\"end\").add_to(map)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "loc = [(40.720, -73.993),\n",
+    "       (40.721, -73.996)]\n",
+    "\n",
+    "folium.PolyLine(loc,\n",
+    "                color='red',\n",
+    "                weight=15,\n",
+    "                opacity=0.8).add_to(m)\n",
+    "\n",
+    "map"
    ]
   },
   {
@@ -333,7 +559,7 @@
    "source": [
     "ride_root_dir = os.path.join(\"UAH-DRIVESET-v1\", \"D1\", \"20151110175712-16km-D1-NORMAL1-SECONDARY\")\n",
     "\n",
-    "ride = RideParser(ride_root_dir)\n",
+    "ride = UAHRideParser(ride_root_dir)\n",
     "\n",
     "# col_names = [str(i) for i in range(13)]\n",
     "# col_names = [\"timestamp\", \"speed\", \"lat\", \"long\", \"altitude\", \"vert accuracy\", \"horiz accuracy\", \"course\", \"difcourse\", \"?1\", \"?2\", \"?3\", \"?4\"]\n",
@@ -525,7 +751,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# imgs = ride.generate_acc_sub_graph()\n",
+    "imgs = ride.generate_acc_sub_graph()\n",
     "\n",
     "# im = Image.open(next(imgs))\n",
     "# im.show(title=\"My Image\")"
@@ -606,7 +832,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.12.0"
   },
   "orig_nbformat": 4
  },
