define new targets

--- a/status_invest/status_invest.ipynb
+++ b/status_invest/status_invest.ipynb
@@ -12,6 +12,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- [ ] Dar pontos positivos ou negativos para cada coluna da empresa\n",
+    "- [ ] Rankear ações pela melhor pontuação geral\n",
+    "- [ ] Rankear FIIs da mesm forma\n",
+    "- [ ] Avaliar historicamente se investir ns top 15 desse ranking traz bons resultados\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
