--- a/status_invest/status_invest.ipynb
+++ b/status_invest/status_invest.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +248,7 @@
        "[5 rows x 30 columns]"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -415,7 +415,7 @@
        "4   0.59          0.0080                0.0149            2.0        15900.0  "
       ]
      },
-     "execution_count": 31,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -446,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -651,7 +651,7 @@
        "[5 rows x 30 columns]"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -692,7 +692,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -740,7 +740,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -755,7 +755,7 @@
     "\tshould_order_ascending = the_bigger_the_better\n",
     "\n",
     "\tfilters = ((stock_df[feature_name] >= min_val) & (stock_df[feature_name] <= max_val))\n",
-    "\tfiltered_stock_df = stock_df[filters].sort_values(by=feature_name, ascending=should_order_ascending)\n",
+    "\tfiltered_stock_df = stock_df[filters].sort_values(by=feature_name, ascending=should_order_ascending).head(25)\n",
     "\tfiltered_stock_names = set(filtered_stock_df[\"TICKER\"])\n",
     "\n",
     "\tcalculate_points = (lambda x : 1 if x[\"TICKER\"] in filtered_stock_names else 0)\n",
@@ -771,7 +771,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -805,7 +805,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -1010,7 +1010,7 @@
        "[5 rows x 30 columns]"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1019,10 +1019,11 @@
     "points_df = pd.DataFrame()\n",
     "\n",
     "br_stocks_col_names = set(br_stocks.columns)\n",
+    "feature_names_with_filter = set(feature_to_filter.keys())\n",
     "\n",
     "filtered_br_stocks = br_stocks\n",
     "for feature_name, filter_info in feature_to_filter.items():\n",
-    "\tif feature_name not in br_stocks_col_names:\n",
+    "\tif feature_name not in br_stocks_col_names or feature_name not in feature_names_with_filter:\n",
     "\t\tcontinue\n",
     "\n",
     "\t# step 1\n",
@@ -1045,19 +1046,139 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
-     "ename": "KeyError",
-     "evalue": "'P/ATIVOS'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\Tutubarao\\Downloads\\TCC\\data-analysis\\status_invest\\status_invest.ipynb Cell 10\u001b[0m line \u001b[0;36m1\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Tutubarao/Downloads/TCC/data-analysis/status_invest/status_invest.ipynb#W6sZmlsZQ%3D%3D?line=8'>9</a>\u001b[0m \u001b[39mif\u001b[39;00m col_name \u001b[39mnot\u001b[39;00m \u001b[39min\u001b[39;00m br_stocks_col_names:\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/Tutubarao/Downloads/TCC/data-analysis/status_invest/status_invest.ipynb#W6sZmlsZQ%3D%3D?line=9'>10</a>\u001b[0m \t\u001b[39mcontinue\u001b[39;00m\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/Tutubarao/Downloads/TCC/data-analysis/status_invest/status_invest.ipynb#W6sZmlsZQ%3D%3D?line=11'>12</a>\u001b[0m filter_dict \u001b[39m=\u001b[39m feature_to_filter[col_name]\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/Tutubarao/Downloads/TCC/data-analysis/status_invest/status_invest.ipynb#W6sZmlsZQ%3D%3D?line=12'>13</a>\u001b[0m df_points[\u001b[39m\"\u001b[39m\u001b[39mpoint_\u001b[39m\u001b[39m\"\u001b[39m \u001b[39m+\u001b[39m col_name] \u001b[39m=\u001b[39m generate_point_col_with_rank(filtered_br_stocks, col_name, filter_dict) \n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/Tutubarao/Downloads/TCC/data-analysis/status_invest/status_invest.ipynb#W6sZmlsZQ%3D%3D?line=13'>14</a>\u001b[0m \u001b[39m# .sort_values(by=\"point_P/L\", ascending=False).head(25)\u001b[39;00m\n",
-      "\u001b[1;31mKeyError\u001b[0m: 'P/ATIVOS'"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>TICKER</th>\n",
+       "      <th>total_points</th>\n",
+       "      <th>P/L</th>\n",
+       "      <th>DY</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>AALR3</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>-4.30</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>ABCB4</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>5.71</td>\n",
+       "      <td>6.07</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>ABEV3</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>14.34</td>\n",
+       "      <td>5.86</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>ADHM3</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>-4.09</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>AERI3</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>-5.82</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>615</th>\n",
+       "      <td>WIZC3</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>7.75</td>\n",
+       "      <td>8.75</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>616</th>\n",
+       "      <td>WLMM3</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>8.67</td>\n",
+       "      <td>2.92</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>617</th>\n",
+       "      <td>WLMM4</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>12.63</td>\n",
+       "      <td>2.21</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>618</th>\n",
+       "      <td>YDUQ3</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>54.99</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>619</th>\n",
+       "      <td>ZAMP3</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>-14.87</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>620 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    TICKER  total_points    P/L    DY\n",
+       "0    AALR3           0.0  -4.30   NaN\n",
+       "1    ABCB4           0.0   5.71  6.07\n",
+       "2    ABEV3           0.0  14.34  5.86\n",
+       "3    ADHM3           0.0  -4.09   NaN\n",
+       "4    AERI3           0.0  -5.82   NaN\n",
+       "..     ...           ...    ...   ...\n",
+       "615  WIZC3           0.0   7.75  8.75\n",
+       "616  WLMM3           0.0   8.67  2.92\n",
+       "617  WLMM4           0.0  12.63  2.21\n",
+       "618  YDUQ3           0.0  54.99   NaN\n",
+       "619  ZAMP3           0.0 -14.87   NaN\n",
+       "\n",
+       "[620 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -1068,9 +1189,12 @@
     "\n",
     "filtered_br_stocks = br_stocks\n",
     "for col_name in feature_col_names:\n",
+    "\tprint(\"col_name: \", col_name)\n",
     "\t# df_points[\"point_\" + col_name] = generate_point_col(filtered_br_stocks, col_name) \n",
-    "\tif col_name not in br_stocks_col_names:\n",
+    "\tif feature_name not in br_stocks_col_names or feature_name not in feature_names_with_filter:\n",
     "\t\tcontinue\n",
+    "\n",
+    "\tprint(\"col exists\")\n",
     "\n",
     "\tfilter_dict = feature_to_filter[col_name]\n",
     "\tdf_points[\"point_\" + col_name] = generate_point_col_with_rank(filtered_br_stocks, col_name, filter_dict) \n",
@@ -1083,12 +1207,13 @@
     "df_points[\"P/L\"] = filtered_br_stocks[\"P/L\"]\n",
     "df_points[\"DY\"] = filtered_br_stocks[\"DY\"]\n",
     "\n",
-    "df_points.sort_values(by=\"total_points\", ascending=False).head(50)[[\"TICKER\", \"DY\", \"P/L\", \"point_DY\", \"point_P/L\", \"total_points\"]]"
+    "# df_points.sort_values(by=\"total_points\", ascending=False).head(50)[[\"TICKER\", \"DY\", \"P/L\", \"point_DY\", \"point_P/L\", \"total_points\"]]\n",
+    "df_points"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1405,7 +1530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1457,7 +1582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2373,7 +2498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
