speed does not need outlier removal

--- a/dataset_car/dataset_carro.ipynb
+++ b/dataset_car/dataset_carro.ipynb
@@ -1507,6 +1507,22 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# vels_from_gps_no_oputliers_df = get_df_without_outliers(filtered_vels_from_gps_df, \"SPEED\", \"Velocidade\")\n",
+    "# vels_from_obd_no_oputliers_df = get_df_without_outliers(filtered_vels_from_obd_df, \"SPEED\", \"Velocidade\")\n",
+    "\n",
+    "acc_from_android_no_oputliers_df = get_df_without_outliers(filtered_acc_from_android_df, \"acceleration\", \"Aceleração\")\n",
+    "acc_from_obd_no_oputliers_df = get_df_without_outliers(filtered_acc_from_obd_df, \"acceleration\", \"Aceleração\")\n",
+    "\n",
+    "jerk_from_android_no_oputliers_df = get_df_without_outliers(filtered_jerk_from_android_df, \"jerk\", \"Arrancada\")\n",
+    "jerk_from_obd_no_oputliers_df = get_df_without_outliers(filtered_jerk_from_obd_df, \"jerk\", \"Arrancada\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 26,
    "metadata": {},
    "outputs": [
@@ -1572,21 +1588,150 @@
     }
    ],
    "source": [
-    "display_vel_graph(get_df_without_outliers(filtered_vels_from_gps_df, \"SPEED\", \"Velocidade\"))\n",
-    "display_vel_graph(get_df_without_outliers(filtered_vels_from_obd_df, \"SPEED\", \"Velocidade\"))\n",
+    "# display_vel_graph(vels_from_gps_no_oputliers_df)\n",
+    "# display_vel_graph(vels_from_obd_no_oputliers_df)\n",
     "\n",
-    "display_acc_graph(get_df_without_outliers(filtered_acc_from_android_df, \"acceleration\", \"Aceleração\"))\n",
-    "display_acc_graph(get_df_without_outliers(filtered_acc_from_obd_df, \"acceleration\", \"Aceleração\"))\n",
+    "display_vel_graph(acc_from_android_no_oputliers_df)\n",
+    "display_vel_graph(acc_from_obd_no_oputliers_df)\n",
     "\n",
-    "display_jerk_graph(get_df_without_outliers(filtered_jerk_from_android_df, \"jerk\", \"Arrancada\"))\n",
-    "display_jerk_graph(get_df_without_outliers(filtered_jerk_from_obd_df, \"jerk\", \"Arrancada\"))"
+    "display_vel_graph(jerk_from_android_no_oputliers_df)\n",
+    "display_vel_graph(jerk_from_obd_no_oputliers_df)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>timestamp</th>\n",
+       "      <th>SPEED</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1.700517e+09</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1.700517e+09</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1.700517e+09</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1.700517e+09</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>1.700517e+09</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>1.700517e+09</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>1.700517e+09</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>1.700517e+09</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>65</th>\n",
+       "      <td>1.700517e+09</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>66</th>\n",
+       "      <td>1.700517e+09</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>67</th>\n",
+       "      <td>1.700517e+09</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>68</th>\n",
+       "      <td>1.700517e+09</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>69</th>\n",
+       "      <td>1.700517e+09</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>84</th>\n",
+       "      <td>1.700518e+09</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>85</th>\n",
+       "      <td>1.700518e+09</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       timestamp  SPEED\n",
+       "0   1.700517e+09    0.0\n",
+       "1   1.700517e+09    0.0\n",
+       "2   1.700517e+09    0.0\n",
+       "3   1.700517e+09    0.0\n",
+       "5   1.700517e+09    0.0\n",
+       "6   1.700517e+09    0.0\n",
+       "7   1.700517e+09    0.0\n",
+       "8   1.700517e+09    0.0\n",
+       "65  1.700517e+09    0.0\n",
+       "66  1.700517e+09    0.0\n",
+       "67  1.700517e+09    0.0\n",
+       "68  1.700517e+09    0.0\n",
+       "69  1.700517e+09    0.0\n",
+       "84  1.700518e+09    0.0\n",
+       "85  1.700518e+09    0.0"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": []
   },
   {
