separate null velocity regions

--- a/dataset_car/dataset_carro.ipynb
+++ b/dataset_car/dataset_carro.ipynb
@@ -1600,139 +1600,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>timestamp</th>\n",
-       "      <th>SPEED</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1.700517e+09</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1.700517e+09</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>1.700517e+09</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>1.700517e+09</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>1.700517e+09</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>1.700517e+09</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>1.700517e+09</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>1.700517e+09</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>65</th>\n",
-       "      <td>1.700517e+09</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>66</th>\n",
-       "      <td>1.700517e+09</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>67</th>\n",
-       "      <td>1.700517e+09</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>68</th>\n",
-       "      <td>1.700517e+09</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>69</th>\n",
-       "      <td>1.700517e+09</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>84</th>\n",
-       "      <td>1.700518e+09</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>85</th>\n",
-       "      <td>1.700518e+09</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "       timestamp  SPEED\n",
-       "0   1.700517e+09    0.0\n",
-       "1   1.700517e+09    0.0\n",
-       "2   1.700517e+09    0.0\n",
-       "3   1.700517e+09    0.0\n",
-       "5   1.700517e+09    0.0\n",
-       "6   1.700517e+09    0.0\n",
-       "7   1.700517e+09    0.0\n",
-       "8   1.700517e+09    0.0\n",
-       "65  1.700517e+09    0.0\n",
-       "66  1.700517e+09    0.0\n",
-       "67  1.700517e+09    0.0\n",
-       "68  1.700517e+09    0.0\n",
-       "69  1.700517e+09    0.0\n",
-       "84  1.700518e+09    0.0\n",
-       "85  1.700518e+09    0.0"
+       "(       timestamp  SPEED\n",
+       " 0   1.700517e+09    0.0\n",
+       " 1   1.700517e+09    0.0\n",
+       " 2   1.700517e+09    0.0\n",
+       " 3   1.700517e+09    0.0\n",
+       " 5   1.700517e+09    0.0\n",
+       " 6   1.700517e+09    0.0\n",
+       " 7   1.700517e+09    0.0\n",
+       " 8   1.700517e+09    0.0\n",
+       " 65  1.700517e+09    0.0\n",
+       " 66  1.700517e+09    0.0\n",
+       " 67  1.700517e+09    0.0\n",
+       " 68  1.700517e+09    0.0\n",
+       " 69  1.700517e+09    0.0\n",
+       " 84  1.700518e+09    0.0\n",
+       " 85  1.700518e+09    0.0,\n",
+       " Index([0, 1, 2, 3, 5, 6, 7, 8, 65, 66, 67, 68, 69, 84, 85], dtype='int64'),\n",
+       " [3, 8, 69, 85],\n",
+       " [0, 5, 65, 84])"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "stopped_speeds = vels_from_obd_df[vels_from_obd_df[\"SPEED\"] <= 0.1]\n",
+    "stopped_speeds_indices = stopped_speeds.index\n",
+    "qtty_of_indices = len(stopped_speeds_indices)\n",
+    "\n",
+    "acceleration_starts = []\n",
+    "acceleration_endings = [0]\n",
+    "for i in range(qtty_of_indices - 1):\n",
+    "\trow_id_1 = stopped_speeds_indices[i]\n",
+    "\trow_id_2 = stopped_speeds_indices[i + 1]\n",
+    "\n",
+    "\tif row_id_1 != row_id_2 - 1:\n",
+    "\t\tacceleration_starts.append(row_id_1)\n",
+    "\t\tacceleration_endings.append(row_id_2)\n",
+    "\n",
+    "acceleration_starts.append(stopped_speeds_indices[-1])\n",
+    "\n",
+    "stopped_speeds, stopped_speeds_indices, acceleration_starts, acceleration_endings"
+   ]
   },
   {
    "attachments": {},
