draft for null elocity region identification

--- a/dataset_car/dataset_carro.ipynb
+++ b/dataset_car/dataset_carro.ipynb
@@ -1600,38 +1600,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 61,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(       timestamp  SPEED\n",
-       " 0   1.700517e+09    0.0\n",
-       " 1   1.700517e+09    0.0\n",
-       " 2   1.700517e+09    0.0\n",
-       " 3   1.700517e+09    0.0\n",
-       " 5   1.700517e+09    0.0\n",
-       " 6   1.700517e+09    0.0\n",
-       " 7   1.700517e+09    0.0\n",
-       " 8   1.700517e+09    0.0\n",
-       " 65  1.700517e+09    0.0\n",
-       " 66  1.700517e+09    0.0\n",
-       " 67  1.700517e+09    0.0\n",
-       " 68  1.700517e+09    0.0\n",
-       " 69  1.700517e+09    0.0\n",
-       " 84  1.700518e+09    0.0\n",
-       " 85  1.700518e+09    0.0,\n",
-       " Index([0, 1, 2, 3, 5, 6, 7, 8, 65, 66, 67, 68, 69, 84, 85], dtype='int64'),\n",
-       " [3, 8, 69, 85],\n",
-       " [0, 5, 65, 84])"
-      ]
-     },
-     "execution_count": 55,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "stopped_speeds = vels_from_obd_df[vels_from_obd_df[\"SPEED\"] <= 0.1]\n",
     "stopped_speeds_indices = stopped_speeds.index\n",
@@ -1649,7 +1620,23 @@
     "\n",
     "acceleration_starts.append(stopped_speeds_indices[-1])\n",
     "\n",
-    "stopped_speeds, stopped_speeds_indices, acceleration_starts, acceleration_endings"
+    "acceleration_start_timestamps = vels_from_obd_df.filter(items=acceleration_starts, axis=0)[\"timestamp\"]\n",
+    "acceleration_ending_timestamps = vels_from_obd_df.filter(items=acceleration_endings, axis=0)[\"timestamp\"]\n",
+    "\n",
+    "# acc_from_android_df\n",
+    "for timestamp in acceleration_start_timestamps:\n",
+    "\tvel_index = vels_from_obd_df\n",
+    "\tacceleration_start_timestamps[i]\n",
+    "\t# acc_index = acc_from_android_df[\"timestamp\"].searchsorted(timestamp)\n",
+    "\tfor j in range(1, acc_index, -1):\n",
+    "\t\tacc_1 = acc_from_android_df.iloc[j]\n",
+    "\t\tacc_2 = acc_from_android_df.iloc[j + 1]\n",
+    "\n",
+    "\t\tif acc_1 <= acc_2\n",
+    "\n",
+    "\tacc_from_android_df.iloc[acc_index][\"acceleration\"]\n",
+    "\n",
+    "acceleration_start_timestamps"
    ]
   },
   {
