calculate acceleration statistics

--- a/dataset_car/dataset_carro.ipynb
+++ b/dataset_car/dataset_carro.ipynb
@@ -608,7 +608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
@@ -617,7 +617,15 @@
      "text": [
       "[22, 60, 75, 107, 114, 184, 187, 196, 203, 213, 223, 231, 239, 253, 270, 279, 288, 297, 313, 337, 389, 422, 432, 442, 449, 464, 483, 494, 508, 521]\n",
       "30\n",
-      "30\n"
+      "30\n",
+      "0.31853395564321796\n",
+      "0.32576894391051175\n",
+      "0.31853395564321796\n",
+      "0.20271508668785887\n",
+      "0.1432565609499553\n",
+      "0.3412834796261053\n",
+      "0.01414213562373095\n",
+      "1.3463283403390125\n"
      ]
     }
    ],
@@ -630,31 +638,49 @@
     "\n",
     "re_acceleration_avg_s = []\n",
     "last_acc_start_id = 0\n",
-    "for i in range(len(acceleration_starts)):\n",
-    "\tacc_start_id = acceleration_starts[i]\n",
-    "\tstart_timestamp = vels_from_obd_df.iloc[acc_start_id][\"timestamp\"]\n",
-    "\t# acc_index = acc_from_android_df[\"timestamp\"].searchsorted(start_timestamp)\n",
+    "# cut off first from endings and first from starts\n",
+    "for i in range(len(acceleration_starts) - 2):\n",
+    "\t# print(i)\n",
+    "\n",
+    "\tnon_zero_vel_beg_id = acceleration_starts[i]\n",
+    "\tnon_zero_vel_end_id = acceleration_endings[i + 1]\n",
+    "\n",
+    "\tstart_timestamp = vels_from_obd_df.iloc[non_zero_vel_beg_id][\"timestamp\"]\n",
+    "\t\n",
     "\t# vel_index = \n",
     "\n",
-    "\tvel_list = []\n",
-    "\tfor j in range(acc_start_id, last_acc_start_id + 1, -1):\n",
-    "\t\tvel_1 = vels_from_obd_df.iloc[j - 1][\"SPEED\"]\n",
-    "\t\tvel_2 = vels_from_obd_df.iloc[j][\"SPEED\"]\n",
+    "\tacc_list = []\n",
+    "\tfor j in range(non_zero_vel_beg_id, non_zero_vel_end_id - 1):\n",
+    "\t\tvel_1 = vels_from_obd_df.iloc[j][\"SPEED\"]\n",
+    "\t\tvel_2 = vels_from_obd_df.iloc[j + 1][\"SPEED\"]\n",
     "\n",
     "\t\tif vel_1 > vel_2:\n",
     "\t\t\tbreak\n",
     "\n",
-    "\t\tvel_list.append(vel_2)\n",
+    "\t\tacc_index = acc_from_android_df[\"timestamp\"].searchsorted(start_timestamp)\n",
+    "\t\tnew_acc = acc_from_android_df[\"acceleration\"].iloc[acc_index]\n",
     "\n",
-    "\tlast_acc_start_id = acc_start_id #acc_index\n",
+    "\t\tacc_list.append(new_acc)\n",
     "\n",
-    "\tprint(\"vel_list\", vel_list)\n",
-    "\tre_acceleration_avg = np.average(vel_list)\n",
+    "\tlast_acc_start_id = non_zero_vel_beg_id #acc_index\n",
+    "\n",
+    "\tre_acceleration_avg = np.average(acc_list)\n",
     "\tre_acceleration_avg_s.append(re_acceleration_avg)\n",
+    "\t\n",
+    "\t# print(\"acc_list\", acc_list)\n",
+    "\t# print(\"re_acceleration_avg\", re_acceleration_avg)\n",
     "\n",
     "# \tacc_from_android_df.iloc[acc_index][\"acceleration\"]\n",
     "\n",
-    "# acceleration_start_timestamps, re_acceleration_avg"
+    "# acceleration_start_timestamps, \n",
+    "print(np.average(re_acceleration_avg_s))\n",
+    "print(np.std(re_acceleration_avg_s))\n",
+    "print(np.mean(re_acceleration_avg_s))\n",
+    "print(np.median(re_acceleration_avg_s))\n",
+    "print(np.quantile(re_acceleration_avg_s, 0.25))\n",
+    "print(np.quantile(re_acceleration_avg_s, 0.75))\n",
+    "print(min(re_acceleration_avg_s))\n",
+    "print(max(re_acceleration_avg_s))"
    ]
   },
   {
