draft new metric graphs

--- a/dataset_car/dataset_carro.ipynb
+++ b/dataset_car/dataset_carro.ipynb
@@ -1679,7 +1679,7 @@
     "\t\t\t\t\tweight=5,\n",
     "\t\t\t\t\topacity=0.4).add_to(map)\n",
     "\n",
-    "map"
+    "real_ride.create_route_map()"
    ]
   },
   {
