adjust graph creator func name

--- a/dataset_car/dataset_carro.ipynb
+++ b/dataset_car/dataset_carro.ipynb
@@ -9188,10 +9188,10 @@
     "\n",
     "qtty_frames = min(qtty_frames, 100)\n",
     "\n",
-    "# foo_for_real_data(accelerometer_df, frame_granularity, delta_time_size, 0)\n",
+    "# generate_3_axis_acc_graph(accelerometer_df, frame_granularity, delta_time_size, 0)\n",
     "\n",
     "for i in range(10): #qtty_frames):\n",
-    "    real_ride.foo_for_real_data(frame_granularity, delta_time_size, i)\n"
+    "    real_ride.generate_3_axis_acc_graph(frame_granularity, delta_time_size, i)\n"
    ]
   },
   {
