draft for compatibility workaround

--- a/dataset_car/dataset_carro.ipynb
+++ b/dataset_car/dataset_carro.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,21 +125,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "cannot convert 410F3E0:A1008D00000000 to float\n"
-     ]
-    },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/arthurpfonseca/Documents/Poli/5oQuadriAula/TCC/data-analysis/dataset_car/ride_parser.py:52: DtypeWarning: Columns (19,21) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "/home/arthurpfonseca/Documents/Poli/5oQuadriAula/TCC/data-analysis/dataset_car/ride_parser.py:57: DtypeWarning: Columns (19,21) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  bo_2016_df = pd.read_csv(bo_2016_path)\n"
      ]
     },
@@ -180,45 +173,45 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>1.700924e+09</td>\n",
-       "      <td>-3.51</td>\n",
-       "      <td>6.58</td>\n",
-       "      <td>8.34</td>\n",
-       "      <td>-3.51</td>\n",
-       "      <td>6.58</td>\n",
-       "      <td>8.34</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>11.188034</td>\n",
+       "      <td>1.700517e+09</td>\n",
+       "      <td>-0.51</td>\n",
+       "      <td>0.24</td>\n",
+       "      <td>-0.08</td>\n",
+       "      <td>-0.51</td>\n",
+       "      <td>0.24</td>\n",
+       "      <td>-0.08</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>7.70</td>\n",
+       "      <td>5.99</td>\n",
+       "      <td>0.569298</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>1.700924e+09</td>\n",
-       "      <td>0.35</td>\n",
-       "      <td>-0.31</td>\n",
-       "      <td>0.01</td>\n",
-       "      <td>0.35</td>\n",
-       "      <td>-0.31</td>\n",
-       "      <td>0.01</td>\n",
-       "      <td>-1.89</td>\n",
-       "      <td>6.36</td>\n",
-       "      <td>7.22</td>\n",
-       "      <td>0.467654</td>\n",
+       "      <td>1.700517e+09</td>\n",
+       "      <td>-0.55</td>\n",
+       "      <td>0.15</td>\n",
+       "      <td>-0.24</td>\n",
+       "      <td>-0.55</td>\n",
+       "      <td>0.15</td>\n",
+       "      <td>-0.24</td>\n",
+       "      <td>0.99</td>\n",
+       "      <td>7.72</td>\n",
+       "      <td>5.97</td>\n",
+       "      <td>0.618547</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>1.700924e+09</td>\n",
-       "      <td>-1.11</td>\n",
-       "      <td>-0.05</td>\n",
-       "      <td>-0.54</td>\n",
-       "      <td>-1.11</td>\n",
-       "      <td>-0.05</td>\n",
-       "      <td>-0.54</td>\n",
-       "      <td>-1.36</td>\n",
-       "      <td>6.17</td>\n",
-       "      <td>7.50</td>\n",
-       "      <td>1.235395</td>\n",
+       "      <td>1.700517e+09</td>\n",
+       "      <td>0.08</td>\n",
+       "      <td>-0.30</td>\n",
+       "      <td>-0.38</td>\n",
+       "      <td>0.08</td>\n",
+       "      <td>-0.30</td>\n",
+       "      <td>-0.38</td>\n",
+       "      <td>1.02</td>\n",
+       "      <td>7.74</td>\n",
+       "      <td>5.93</td>\n",
+       "      <td>0.490714</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -226,30 +219,30 @@
       ],
       "text/plain": [
        "      timestamp  acc_x  acc_y  acc_z  filtered_acc_x  filtered_acc_y  \\\n",
-       "0  1.700924e+09  -3.51   6.58   8.34           -3.51            6.58   \n",
-       "1  1.700924e+09   0.35  -0.31   0.01            0.35           -0.31   \n",
-       "2  1.700924e+09  -1.11  -0.05  -0.54           -1.11           -0.05   \n",
+       "0  1.700517e+09  -0.51   0.24  -0.08           -0.51            0.24   \n",
+       "1  1.700517e+09  -0.55   0.15  -0.24           -0.55            0.15   \n",
+       "2  1.700517e+09   0.08  -0.30  -0.38            0.08           -0.30   \n",
        "\n",
        "   filtered_acc_z  grav_x  grav_y  grav_z  acc_resultant  \n",
-       "0            8.34    0.00    0.00    0.00      11.188034  \n",
-       "1            0.01   -1.89    6.36    7.22       0.467654  \n",
-       "2           -0.54   -1.36    6.17    7.50       1.235395  "
+       "0           -0.08    1.00    7.70    5.99       0.569298  \n",
+       "1           -0.24    0.99    7.72    5.97       0.618547  \n",
+       "2           -0.38    1.02    7.74    5.93       0.490714  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# ride_root_dir = os.path.join(\"RealData\", \"Data_2023-11-20_pt2\")\n",
+    "ride_root_dir = os.path.join(\"RealData\", \"Data_2023-11-20_pt2\")\n",
     "# ride_root_dir = os.path.join(\"RealData\", \"Mercedes_25-11-2023\")\n",
-    "ride_root_dir = os.path.join(\"RealData\", \"Ix35_Hyundai_25-11-2023\")\n",
+    "# ride_root_dir = os.path.join(\"RealData\", \"Ix35_Hyundai_25-11-2023\")\n",
     "# ride_root_dir = os.path.join(\"RealData\", \"Agressivo_28-11-2023_traj1\")\n",
     "# ride_root_dir = os.path.join(\"RealData\", \"Dados_com_millis\")\n",
     "\n",
     "\n",
-    "real_ride = RealRideParser(ride_root_dir)\n",
+    "real_ride = RealRideParser(root_dir=ride_root_dir)\n",
     "\n",
     "latitudes = real_ride.gps_df[\"lat\"]\n",
     "longitudes = real_ride.gps_df[\"long\"]\n",
