--- a/dataset_car/dataset_carro.ipynb
+++ b/dataset_car/dataset_carro.ipynb
@@ -181,7 +181,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_36483/3290557273.py:5: FutureWarning: The geopandas.dataset module is deprecated and will be removed in GeoPandas 1.0. You can get the original 'naturalearth_lowres' data from https://www.naturalearthdata.com/downloads/110m-cultural-vectors/.\n",
+      "/tmp/ipykernel_37658/3290557273.py:5: FutureWarning: The geopandas.dataset module is deprecated and will be removed in GeoPandas 1.0. You can get the original 'naturalearth_lowres' data from https://www.naturalearthdata.com/downloads/110m-cultural-vectors/.\n",
       "  world = gpd.read_file(gpd.datasets.get_path('naturalearth_lowres'))\n"
      ]
     },
@@ -648,11 +648,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
     "pdf_bytes_io = real_ride.generate_pdf_metrics()\n",
+    "pdf_bytes_io.seek(0)\n",
     "pdf_raw_bytes = pdf_bytes_io.read()\n",
     "# open(\"bla.pdf\", \"wb\").write()\n",
     "\n",
@@ -663,8 +664,8 @@
     "with open(nome_arquivo, 'wb') as f:\n",
     "    f.write(pdf_raw_bytes) #base64.b64decode(pdf_raw_bytes))\n",
     "\n",
-    "from io import BytesIO\n",
-    "import shutil\n",
+    "# from io import BytesIO\n",
+    "# import shutil\n",
     "\n",
     "# Substitua 'seu_arquivo.pdf' pelo nome desejado para o arquivo\n",
     "\n",
@@ -672,13 +673,13 @@
     "# Crie um objeto BytesIO e escreva os bytes do conteúdo do PDF nele\n",
     "# pdf_bytes_io = BytesIO(pdf_content)\n",
     "\n",
-    "pdf_bytes_io.seek(0)\n",
+    "# pdf_bytes_io.seek(0)\n",
     "\n",
-    "# Crie um novo objeto de arquivo no modo binário ('wb') e copie os bytes do BytesIO para o arquivo\n",
-    "with open(nome_arquivo, 'wb') as arquivo_pdf:\n",
-    "    shutil.copyfileobj(pdf_bytes_io, arquivo_pdf)\n",
+    "# # Crie um novo objeto de arquivo no modo binário ('wb') e copie os bytes do BytesIO para o arquivo\n",
+    "# with open(nome_arquivo, 'wb') as arquivo_pdf:\n",
+    "#     shutil.copyfileobj(pdf_bytes_io, arquivo_pdf)\n",
     "\n",
-    "print(f'O arquivo {nome_arquivo} foi salvo com sucesso.')\n"
+    "# print(f'O arquivo {nome_arquivo} foi salvo com sucesso.')\n"
    ]
   },
   {
