--- a/dataset_car/dataset_carro.ipynb
+++ b/dataset_car/dataset_carro.ipynb
@@ -132,41 +132,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# ride_root_dir_1 = os.path.join(\"RealData\", \"Data_2023-11-20_pt1\")\n",
-    "# ride_root_dir_2 = os.path.join(\"RealData\", \"Mercedes_25-11-2023\")\n",
-    "# ride_root_dir_3 = os.path.join(\"RealData\", \"Xsport_Ford_25-11-2023\")\n",
-    "\n",
-    "# real_ride_1 = RealRideParser(root_dir=ride_root_dir_1)\n",
-    "# real_ride_2 = RealRideParser(root_dir=ride_root_dir_2)\n",
-    "# real_ride_3 = RealRideParser(root_dir=ride_root_dir_3)\n",
-    "\n",
-    "# obd_params_1 = set(real_ride_1.obd_data.keys())\n",
-    "# obd_params_2 = set(real_ride_2.obd_data.keys())\n",
-    "# obd_params_3 = set(real_ride_2.obd_data.keys())\n",
-    "\n",
-    "# print(\"obd_params_1\", obd_params_1)\n",
-    "# print(\"obd_params_2\", obd_params_2)\n",
-    "# print(\"obd_params_3\", obd_params_3)\n",
-    "# print(\"insersection\")\n",
-    "\n",
-    "# intersect_list = list(obd_params_1.intersection(obd_params_2).intersection(obd_params_3))\n",
-    "# intersect_list.sort()\n",
-    "# for el in intersect_list:\n",
-    "#     print(\"\\\\item\", el)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "# # ride_root_dir = os.path.join(\"RealData\", \"Data_2023-11-03\")\n",
-    "# ride_root_dir = os.path.join(\"RealData\", \"Data_2023-11-20_pt2\")\n",
+    "ride_root_dir = os.path.join(\"RealData\", \"Data_2023-11-20_pt2\")\n",
     "# # ride_root_dir = os.path.join(\"RealData\", \"FakeTest\")\n",
     "# # ride_root_dir = os.path.join(\"RealData\", \"Mercedes_25-11-2023\")\n",
     "# # ride_root_dir = os.path.join(\"RealData\", \"Ix35_Hyundai_25-11-2023\")\n",
@@ -174,38 +145,16 @@
     "# # ride_root_dir = os.path.join(\"RealData\", \"Dados_com_millis\")\n",
     "\n",
     "\n",
-    "# real_ride = RealRideParser(root_dir=ride_root_dir)\n",
+    "real_ride = RealRideParser(root_dir=ride_root_dir)\n",
     "\n",
-    "# latitudes = real_ride.gps_df[\"lat\"]\n",
-    "# longitudes = real_ride.gps_df[\"long\"]\n",
+    "latitudes = real_ride.gps_df[\"lat\"]\n",
+    "longitudes = real_ride.gps_df[\"long\"]\n",
     "\n",
-    "# qtty_data = len(latitudes)\n",
+    "qtty_data = len(latitudes)\n",
     "\n",
-    "# lat_longs = [(latitudes.iloc[i], longitudes.iloc[i]) for i in range(qtty_data)]\n",
+    "lat_longs = [(latitudes.iloc[i], longitudes.iloc[i]) for i in range(qtty_data)]\n",
     "\n",
-    "# real_ride.accelerometer_df.head(3)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# fig1, ax1 = plt.subplots()\n",
-    "# ax1.set_title('Contagem de crimes por quadrado de chunk')\n",
-    "# counts = real_ride.crime_analyser.car_crimes_df[[\"chunk_i\", \"chunk_j\"]].groupby(by=[\"chunk_i\", \"chunk_j\"]).size()\n",
-    "# ax1.set_yscale('log')\n",
-    "# ax1.hist(list(counts))\n",
-    "\n",
-    "# # max_count = counts.max()\n",
-    "# # ticks = np.array([max_count // i for i in range(1, 10)])\n",
-    "# # ax1.set_yticks(counts)\n",
-    "\n",
-    "# # y_labels = ticks.astype(str)\n",
-    "# # ax1.set_yticklabels(y_labels)\n",
-    "\n",
-    "# plt.show()"
+    "real_ride.accelerometer_df.head(3)"
    ]
   },
   {
@@ -214,7 +163,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# real_ride.generate_pdf_metrics()"
+    "real_ride.generate_pdf_metrics()"
    ]
   },
   {
@@ -223,8 +172,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# map = real_ride.create_route_map()\n",
-    "# real_ride.calculate_crime_stats(map)[0]"
+    "map = real_ride.create_route_map()\n",
+    "real_ride.calculate_crime_stats(map)[0]"
    ]
   },
   {
@@ -265,8 +214,8 @@
    ],
    "source": [
     "user_token = \"arthurpfonseca@gmail.com\"\n",
-    "date_beg = datetime.strptime(\"2023-12-18 10:43:00.000\", \"%Y-%m-%d %H:%M:%S.%f\").__str__()\n",
-    "date_end = datetime.strptime(\"2024-12-18 11:19:59.999\", \"%Y-%m-%d %H:%M:%S.%f\").__str__()\n",
+    "date_beg = datetime.strptime(\"2023-12-18 21:20:00.000\", \"%Y-%m-%d %H:%M:%S.%f\").__str__()\n",
+    "date_end = datetime.strptime(\"2024-12-18 22:19:59.999\", \"%Y-%m-%d %H:%M:%S.%f\").__str__()\n",
     "\n",
     "real_ride_database = RealRideParser(should_get_data_from_database=True, user_token=user_token, date_beg=date_beg, date_end=date_end)\n",
     "real_ride_database.generate_pdf_metrics()"
@@ -278,173 +227,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# from matplotlib.gridspec import GridSpec\n",
-    "# import random\n",
-    "# import numpy\n",
-    "# from matplotlib import pyplot as pl\n",
-    "# from matplotlib.backends.backend_pdf import PdfPages\n",
-    "\n",
-    "# fig = pl.figure(figsize=(12, 16))\n",
-    "# G = GridSpec(2,2)   \n",
-    "\n",
-    "# x = [random.gauss(3,1) for _ in range(400)]\n",
-    "# bins = numpy.linspace(-10, 10, 100)\n",
-    "\n",
-    "# axes_1 = pl.subplot(G[0, 0])\n",
-    "# axes_1.hist(x, bins, alpha=0.5, label='x')\n",
-    "\n",
-    "# axes_2 = pl.subplot(G[1, :])\n",
-    "# axes_2.plot(x)\n",
-    "\n",
-    "# pdf_file = PdfPages(\"teste.pdf\")\n",
-    "# pdf_file.savefig(fig)\n",
-    "# pdf_file.close()\n",
-    "\n",
-    "# # pl.tight_layout()\n",
-    "# # pl.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "import smtplib\n",
-    "from email.mime.multipart import MIMEMultipart\n",
-    "from email.mime.text import MIMEText\n",
-    "from email.mime.application import MIMEApplication\n",
-    "\n",
-    "def send_email(recipient_email, pdf_buffer):\n",
-    "    # Configurações do e-mail\n",
-    "    sender_email = \"tcc.car.data@gmail.com\"\n",
-    "    sender_password = \"abqknazyhkxysmjq\"\n",
-    "    subject = \"Relatório de análise de direção\"\n",
-    "\n",
-    "    # Configuração do servidor SMTP do Gmail\n",
-    "    server_smtp = \"smtp.gmail.com\"\n",
-    "    port_smtp = 587\n",
-    "\n",
-    "    # Criação do objeto MIMEMultipart\n",
-    "    message = MIMEMultipart()\n",
-    "    message[\"From\"] = sender_email\n",
-    "    message[\"To\"] = recipient_email\n",
-    "    message[\"Subject\"] = subject\n",
-    "\n",
-    "    # Adiciona o corpo do e-mail (opcional)\n",
-    "    corpo_email = \"O arquivo PDF em anexo contém um relatório com métricas interessantes sobre o seu padrão de direção e comportamento no trânsito\"\n",
-    "    message.attach(MIMEText(corpo_email, \"plain\"))\n",
-    "\n",
-    "    # Adiciona o arquivo PDF como anexo\n",
-    "    attached_document = MIMEApplication(pdf_buffer.read(), _subtype=\"pdf\")\n",
-    "    attached_document.add_header(\"Content-Disposition\", f\"attachment; filename=relatorio.pdf\")\n",
-    "    message.attach(attached_document)\n",
-    "\n",
-    "    # Inicia a conexão com o servidor SMTP\n",
-    "    with smtplib.SMTP(server_smtp, port_smtp) as server:\n",
-    "        server.starttls()\n",
-    "\n",
-    "        # Efetua login no servidor\n",
-    "        server.login(sender_email, sender_password)\n",
-    "\n",
-    "        # Envia o e-mail\n",
-    "        server.sendmail(sender_email, recipient_email, message.as_string())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "pdf_bytes_io = real_ride.generate_pdf_metrics()\n",
     "pdf_bytes_io.seek(0)\n",
     "\n",
-    "send_email(\"arthurpfonseca@gmail.com\", pdf_bytes_io)\n",
-    "\n",
-    "# pdf_raw_bytes = pdf_bytes_io.read()\n",
-    "# # open(\"bla.pdf\", \"wb\").write()\n",
-    "\n",
-    "# nome_arquivo = 'bla.pdf'\n",
-    "\n",
-    "# import base64\n",
-    "\n",
-    "# with open(nome_arquivo, 'wb') as f:\n",
-    "#     f.write(pdf_raw_bytes) #base64.b64decode(pdf_raw_bytes))\n",
-    "\n",
-    "# from io import BytesIO\n",
-    "# import shutil\n",
-    "\n",
-    "# Substitua 'seu_arquivo.pdf' pelo nome desejado para o arquivo\n",
-    "\n",
-    "\n",
-    "# Crie um objeto BytesIO e escreva os bytes do conteúdo do PDF nele\n",
-    "# pdf_bytes_io = BytesIO(pdf_content)\n",
-    "\n",
-    "# pdf_bytes_io.seek(0)\n",
-    "\n",
-    "# # Crie um novo objeto de arquivo no modo binário ('wb') e copie os bytes do BytesIO para o arquivo\n",
-    "# with open(nome_arquivo, 'wb') as arquivo_pdf:\n",
-    "#     shutil.copyfileobj(pdf_bytes_io, arquivo_pdf)\n",
-    "\n",
-    "# print(f'O arquivo {nome_arquivo} foi salvo com sucesso.')\n"
+    "send_email(\"arthurpfonseca@gmail.com\", pdf_bytes_io)\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import requests\n",
-    "\n",
-    "file_url = \"http://medianet.edmond-de-rothschild.fr/edram/pdf/kiid_fr0010172767_en_20200120_20200128_1954.pdf\"\n",
-    "\n",
-    "headers = {\n",
-    "    \"User-Agent\": \"PostmanRuntime/7.20.1\",\n",
-    "    \"Accept\": \"*/*\",\n",
-    "    \"Cache-Control\": \"no-cache\",\n",
-    "    \"Postman-Token\": \"8eb5df70-4da6-4ba1-a9dd-e68880316cd9,30ac79fa-969b-4a24-8035-26ad1a2650e1\",\n",
-    "    \"Host\": \"medianet.edmond-de-rothschild.fr\",\n",
-    "    \"Accept-Encoding\": \"gzip, deflate\",\n",
-    "    \"Connection\": \"keep-alive\",\n",
-    "    \"cache-control\": \"no-cache\",\n",
-    "}\n",
-    "\n",
-    "r = requests.get(file_url, file_url, headers=headers)\n",
-    "\n",
-    "print(r.content)\n",
-    "\n",
-    "with open(\"python.pdf\", \"wb\") as pdf:\n",
-    "    pdf.write(r.content)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# import requests\n",
-    "# import json\n",
-    "\n",
-    "# # r = requests.post('http://httpbin.org/post', json={\"key\": \"value\"})\n",
-    "\n",
-    "# url = \"https://pntdpvkdsc.execute-api.us-east-1.amazonaws.com/default/app_data\"\n",
-    "# data = {\"method\": \"get_acceleration\"}\n",
-    "# headers = {'Content-type': 'application/json', 'Accept': 'text/plain'}\n",
-    "# r = requests.post(url, data=json.dumps(data), headers=headers)\n",
-    "\n",
-    "# r.status_code, r.json()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -472,13 +259,6 @@
    "source": [
     "real_ride.generate_graph_for_orientation()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
